<resources>
    <string name="app_name">Music Player</string>


    <string name="todo">Todo</string>
    <string name="folder">Folder</string>
    <string name="favorites">Favorites</string>
    <string name="songs">Songs</string>
    <string name="now_playing"><![CDATA[Now Playing  >>]]></string>
    <string name="play">Play</string>
    <string name="play_next">Play Next</string>
    <string name="add_to">Add to</string>
    <string name="queue">Queue</string>
    <string name="favourite">Favourite</string>
    <string name="share">Share</string>
    <string name="song_info">Song Info</string>
    <string name="about">About</string>
    <string name="setting">Settings</string>
    <string name="favourite_songs">Favourite Songs</string>
    <string name="play_both_deck">Play Both Deck</string>
    <string name="refresh">Refresh</string>
    <string name="search">Search</string>
    <string name="_00_00">00:00</string>
    <string name="up_next">Up Next</string>
    <string name="up_next_list">Up Next</string>
    <string name="title">Title</string>
    <string name="home">Home</string>
    <string name="library">Library</string>
    <string name="all_songs">All Songs</string>
    <string name="history">History</string>
    <string name="Recent">Recent</string>
    <string name="reload_songs">Reload Music Library</string>
    <string name="no_data">No Data</string>
    <string name="album">Album</string>
    <string name="artist">Artist</string>
    <string name="titile">Titile</string>
    <string name="theme_color">Theme Color</string>
    <string name="refresh_list_in_splash">Refresh List in Splash</string>
    <string name="direct_play">Direct Play</string>
    <string name="no_result">No Result</string>
    <string name="open_app_refresh_list">Scan for new songs on startup</string>
    <string name="automatically_scan_internal_storage_for_new_music_when_the_app_starts">Automatically scan internal storage for new music when the app starts.</string>
    <string name="view_details_before_playing">View details before playing</string>
    <string name="tap_a_song_to_see_its_details_first_then_choose_to_play_from_the_last_position">Tap a song to see its details first, then choose to play from the last position.</string>
    <string name="developer_amit_bodaliya">Developer: Amit Bodaliya</string>
    <string name="visit_amitbodaliya_com">More info: amitbodaliya.com</string>
</resources>