<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_library">

    <fragment
        android:id="@+id/navigation_main"
        android:name="com.abapp.soundplay.Fragment.FragmentMain"
        android:label="@string/home"
        tools:layout="@layout/fragment_main"/>

    <fragment
        android:id="@+id/navigation_library"
        android:name="com.abapp.soundplay.Fragment.FragmentLibrary"
        android:label="@string/library"
        tools:layout="@layout/fragment_library" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.abapp.soundplay.Fragment.FragmentSearch"
        android:label="@string/folder"
        tools:layout="@layout/fragment_search" />


    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.abapp.soundplay.Fragment.FragmentSettings"
        android:label="@string/home"
        tools:layout="@layout/fragment_settings" />



</navigation>