<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center_vertical"
        android:paddingHorizontal="7dp">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/backSearch"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:padding="10dp"
                app:srcCompat="@drawable/baseline_arrow_back_24"
                android:contentDescription="@string/todo" />

            <EditText
                android:id="@+id/editTextSearch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/search"
                android:singleLine="true"
                android:autofillHints="@string/search" />

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>



    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="7dp"
        app:cardElevation="0dp"
        app:strokeWidth="0dp"
        android:layout_margin="@dimen/cardMargin"
        android:backgroundTint="@android:color/transparent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewArtistSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.card.MaterialCardView>


    <com.simplecityapps.recyclerview_fastscroll.views.FastScrollRecyclerView
        android:id="@+id/searchRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:fastScrollAutoHide="false"
        app:fastScrollPopupBgColor="?attr/colorAccent"
        app:fastScrollPopupTextColor="@android:color/black"
        app:fastScrollThumbColor="?attr/colorAccent"
        app:fastScrollThumbEnabled="true"
        app:fastScrollThumbInactiveColor="?attr/colorAccent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/emptyListView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_result"
        android:layout_gravity="center"
        android:visibility="gone"
        android:paddingVertical="50dp"
        android:textSize="18sp"/>

</LinearLayout>